--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="container">
   <div id="top">
-    <a href="file:///C:/Users/Tommy/Desktop/autumn-daze/hello3.html">
+    <a href="https://athena-336.github.io/hello/html.html">
     My Link</a>
   </div>
   <div class="container">
